--- a/public/assets/css/2main.css
+++ b/public/assets/css/2main.css
@@ -99,6 +99,7 @@ body {
 .icon-menu {
     display: none;
 }
+
 @media (max-width: 768px) {
     .icon-menu {
         display: block;
@@ -108,6 +109,7 @@ body {
         cursor: pointer;
         z-index: 5;
     }
+
     .icon-menu span {
         transition: all 0.3s ease 0s;
         top: calc(50% - 1px);
@@ -117,20 +119,25 @@ body {
         height: 2px;
         background-color: #000;
     }
+
     .icon-menu span:first-child {
         top: 0px;
     }
+
     .icon-menu span:last-child {
         top: auto;
         bottom: 0px;
     }
+
     .icon-menu._active span {
         transform: scale(0);
     }
+
     .icon-menu._active span:first-child {
         transform: rotate(-45deg);
         top: calc(50% - 1px);
     }
+
     .icon-menu._active span:last-child {
         transform: rotate(45deg);
         bottom: calc(50% - 1px);
@@ -141,25 +148,37 @@ body {
     height: 100vh;
     overflow: hidden;
 }
+
 .welcome__container {
     max-width: 1400px;
     height: 100%;
     margin: 0px auto;
+    display: flex;
 }
-@media (min-width: 768px) {
+
+@media (min-width: 120em) {
     .welcome__container {
-        display: flex;
+        max-width: 1600px;
     }
 }
+
+@media (min-width: 140em) {
+    .welcome__container {
+        max-width: 1800px;
+    }
+}
+
 @media (min-width: 768px) {
     .welcome__left {
         flex: 0 0 50%;
     }
 }
+
 .welcome__left img {
     width: 100%;
     height: 100%;
 }
+
 .welcome__right {
     flex: 0 0 50%;
     height: 100%;
@@ -167,6 +186,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 @media (min-width: 2000px) {
     .welcome__right {
         font-size: 28px;
@@ -175,59 +195,87 @@ body {
 }
 
 .card-registr {
-    height: 50%;
-    width: 60%;
-    padding: 50px 10px 20px 10px;
+    height: 60%;
+    width: 55%;
+    padding: 0px 10px 20px 10px;
 }
-@media (min-width: 2000px) {
+
+@media (min-width: 120em) {
     .card-registr {
-        width: 75%;
+        height: 50%;
+        width: 50%;
+        padding: 50px 10px 20px 10px;
     }
 }
+
+@media (min-width: 140em) {
+    .card-registr {
+        height: 50%;
+        width: 50%;
+        padding: 50px 10px 20px 10px;
+    }
+}
+
 .card-registr__body {
     display: flex;
     flex-direction: column;
 }
+
 .card-registr__title {
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 4px;
 }
+
 @media (min-width: 2000px) {
     .card-registr__title {
         font-size: 35px;
     }
 }
+
 .card-registr__subtitle {
     color: gray;
     margin-bottom: 10px;
 }
+
+.card-registr__error {
+    color: red;
+    padding: 5px;
+    background-color: rgba(224, 40, 40, 0.2);
+    text-align: center;
+}
+
 .card-registr__form {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 @media (min-width: 2000px) {
     .card-registr__form {
         margin-top: 20px;
         margin-bottom: 10px;
     }
 }
+
 @media (min-width: 2000px) {
     .card-registr__form input {
         margin-top: 20px;
         font-size: 25px;
     }
 }
+
 @media (min-width: 2000px) {
     .card-registr__form label {
         margin-top: 10px;
     }
 }
+
 .card-registr__sign-in {
     color: gray;
 }
+
 .card-registr__sign-in-btn {
     font-weight: 700;
     margin-top: 5px;
@@ -237,6 +285,7 @@ body {
     background-color: #fff;
     color: black;
 }
+
 @media (min-width: 2000px) {
     .card-registr__sign-in-btn {
         padding: 20px 50px 20px 50px;
@@ -249,6 +298,7 @@ body {
     margin-bottom: 10px;
     padding: 7px 0;
 }
+
 .form-registration__btn {
     font-weight: 700;
     margin-top: 20px;
@@ -257,6 +307,7 @@ body {
     background-color: #000;
     color: white;
 }
+
 @media (min-width: 2000px) {
     .form-registration__btn {
         padding: 20px 50px 20px 50px;
@@ -267,3 +318,45 @@ body {
 .hide {
     display: none;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.alert-block {
+    position: fixed;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 450px;
+    height: 50px;
+    background-color: #ff0000;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    box-sizing: border-box;
+    z-index: 9999;
+}
+
+.alert-block__success {
+    background-color: #09e56e;
+
+}
+
+.alert-block__close-btn {
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    padding: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none;
+}
+
+.alert-block--hidden {
+    display: none;
+}
+
