--- a/public/assets/css/appmain.css
+++ b/public/assets/css/appmain.css
@@ -1,95 +1,5 @@
-/* Header Styles */
-.header__container{
-}
-header {
-    background-color: #fff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
-    padding: 0;
-    /*position: fixed;*/
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-}
-
-
-.logo a {
-    color: #333;
-    font-size: 1.5rem;
-    text-decoration: none;
-}
-
-nav ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-}
-
-nav li {
-    margin: 0 10px;
-}
-
-nav li a {
-    color: #333;
-    font-size: 1.2rem;
-    text-decoration: none;
-}
-
-nav li a:hover {
-    color: #1abc9c;
-}
-
-.menu-toggle {
-    display: none;
-}
-
-@media screen and (max-width: 768px) {
-    header {
-        height: auto;
-        padding: 10px 20px;
-    }
-
-    .menu-toggle {
-        display: block;
-        font-size: 1.5rem;
-        margin-right: 20px;
-        cursor: pointer;
-    }
-
-    nav {
-        display: none;
-        flex-direction: column;
-        padding: 0;
-        position: absolute;
-        top: 70px;
-        left: 0;
-        width: 100%;
-        background-color: #fff;
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    nav li {
-        margin: 10px 0;
-    }
-
-    nav li a {
-        font-size: 1.5rem;
-    }
-}
 @import url(https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700,700italic&display=swap);
+
 @font-face {
     font-family: icons;
     font-display: swap;
@@ -97,6 +7,7 @@ nav li a:hover {
     font-weight: 400;
     font-style: normal;
 }
+
 @font-face {
     font-family: "icons";
     src: url("../fonts/icons.eot?kakdlm");
@@ -105,6 +16,7 @@ nav li a:hover {
     font-style: normal;
     font-display: block;
 }
+
 [class^=_icon-]::before,
 [class*=" _icon-"]::before {
     /* use !important to prevent issues with browser extensions that change fonts */
@@ -241,6 +153,7 @@ body {
 .icon-menu {
     display: none;
 }
+
 @media (max-width: 768px) {
     .icon-menu {
         display: block;
@@ -250,6 +163,7 @@ body {
         cursor: pointer;
         z-index: 5;
     }
+
     .icon-menu span {
         transition: all 0.3s ease 0s;
         top: calc(50% - 1px);
@@ -259,20 +173,25 @@ body {
         height: 2px;
         background-color: #000;
     }
+
     .icon-menu span:first-child {
         top: 0px;
     }
+
     .icon-menu span:last-child {
         top: auto;
         bottom: 0px;
     }
+
     .icon-menu._active span {
         transform: scale(0);
     }
+
     .icon-menu._active span:first-child {
         transform: rotate(-45deg);
         top: calc(50% - 1px);
     }
+
     .icon-menu._active span:last-child {
         transform: rotate(45deg);
         bottom: calc(50% - 1px);
@@ -283,31 +202,37 @@ body {
     height: 100vh;
     overflow: hidden;
 }
+
 .welcome__container {
     max-width: 1400px;
     height: 100%;
     margin: 0px auto;
     display: flex;
 }
+
 @media (min-width: 120em) {
     .welcome__container {
         max-width: 1600px;
     }
 }
+
 @media (min-width: 140em) {
     .welcome__container {
         max-width: 1800px;
     }
 }
+
 @media (min-width: 768px) {
     .welcome__left {
         flex: 0 0 50%;
     }
 }
+
 .welcome__left img {
     width: 100%;
     height: 100%;
 }
+
 .welcome__right {
     flex: 0 0 50%;
     height: 100%;
@@ -315,6 +240,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 @media (min-width: 2000px) {
     .welcome__right {
         font-size: 28px;
@@ -327,6 +253,7 @@ body {
     width: 55%;
     padding: 0px 10px 20px 10px;
 }
+
 @media (min-width: 120em) {
     .card-registr {
         height: 50%;
@@ -334,6 +261,7 @@ body {
         padding: 50px 10px 20px 10px;
     }
 }
+
 @media (min-width: 140em) {
     .card-registr {
         height: 50%;
@@ -341,56 +269,67 @@ body {
         padding: 50px 10px 20px 10px;
     }
 }
+
 .card-registr__body {
     display: flex;
     flex-direction: column;
 }
+
 .card-registr__title {
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 4px;
 }
+
 @media (min-width: 2000px) {
     .card-registr__title {
         font-size: 35px;
     }
 }
+
 .card-registr__subtitle {
     color: gray;
     margin-bottom: 10px;
 }
+
 .card-registr__error {
     color: red;
     padding: 5px;
     background-color: rgba(224, 40, 40, 0.2);
     text-align: center;
 }
+
 .card-registr__form {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 @media (min-width: 2000px) {
     .card-registr__form {
         margin-top: 20px;
         margin-bottom: 10px;
     }
 }
+
 @media (min-width: 2000px) {
     .card-registr__form input {
         margin-top: 20px;
         font-size: 25px;
     }
 }
+
 @media (min-width: 2000px) {
     .card-registr__form label {
         margin-top: 10px;
     }
 }
+
 .card-registr__sign-in {
     color: gray;
 }
+
 .card-registr__sign-in-btn {
     font-weight: 700;
     margin-top: 5px;
@@ -400,6 +339,7 @@ body {
     background-color: #fff;
     color: black;
 }
+
 @media (min-width: 2000px) {
     .card-registr__sign-in-btn {
         padding: 20px 50px 20px 50px;
@@ -412,6 +352,7 @@ body {
     margin-bottom: 10px;
     padding: 7px 0;
 }
+
 .form-registration__btn {
     font-weight: 700;
     margin-top: 20px;
@@ -420,6 +361,7 @@ body {
     background-color: #000;
     color: white;
 }
+
 @media (min-width: 2000px) {
     .form-registration__btn {
         padding: 20px 50px 20px 50px;
@@ -436,34 +378,41 @@ body {
     font-size: 20px;
     font-weight: 700;
 }
+
 .header__container {
     max-width: 1200px;
     height: 50px;
     margin: 0px auto;
     padding: 0 10px;
 }
+
 @media (min-width: 120em) {
     .header__container {
         max-width: 1600px;
     }
 }
+
 @media (min-width: 140em) {
     .header__container {
         max-width: 1800px;
     }
 }
+
 .header__menu {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 100%;
 }
+
 .header__logo-parent {
     height: 100%;
 }
+
 .header__logo {
     flex: 0 0 60px;
 }
+
 .header__logo img {
     height: 90%;
 }
@@ -475,25 +424,31 @@ body {
     flex: 0 1 70%;
     height: 100%;
 }
+
 .menu__list {
     display: flex;
     flex: 0 0 80%;
     justify-content: space-around;
 }
+
 .menu__item:not(:last-child) {
     margin-right: 50px;
 }
+
 .menu__link {
     color: black;
 }
+
 .my-profile {
     height: 100%;
 }
+
 .my-profile__block {
     height: 100%;
     display: flex;
     align-items: center;
 }
+
 .my-profile__parent {
     font-size: 18px;
     font-weight: 700;
@@ -505,9 +460,11 @@ body {
     border: 2px solid black;
     padding: 0px 10px 0px 10px;
 }
+
 .my-profile__parent img {
     height: 40%;
 }
+
 .main {
     height: calc(100vh - 70px);
     margin-top: 30px;
@@ -516,22 +473,26 @@ body {
 .section-start {
     height: 20%;
 }
+
 .section-start__container {
     max-width: 1200px;
     margin: 0px auto;
     height: 100%;
     padding: 0 10px;
 }
+
 @media (min-width: 120em) {
     .section-start__container {
         max-width: 1600px;
     }
 }
+
 @media (min-width: 140em) {
     .section-start__container {
         max-width: 1800px;
     }
 }
+
 .section-start__block {
     background: url("../img/Scribble-Light.png") 0% 20%/220px no-repeat, url("../img/Scribble-Light2.png") 100% 80%/220px no-repeat, black;
     max-width: 100%;
@@ -543,6 +504,7 @@ body {
     box-shadow: 9px 9px 17px -7px rgba(0, 0, 0, 0.67);
     border-radius: 5px;
 }
+
 .section-start__text {
     flex: 0 1 600px;
     text-align: center;
@@ -550,12 +512,14 @@ body {
     font-weight: 700;
     font-size: 18px;
 }
+
 @media (min-width: 120em) {
     .section-start__text {
         line-height: 2;
         flex: 0 1 800px;
     }
 }
+
 @media (min-width: 140em) {
     .section-start__text {
         line-height: 2.5;
@@ -567,22 +531,26 @@ body {
     margin-top: 20px;
     height: 85%;
 }
+
 .section-addProducts__container {
     max-width: 1200px;
     margin: 0px auto;
     height: 100%;
     padding: 0 10px;
 }
+
 @media (min-width: 120em) {
     .section-addProducts__container {
         max-width: 1600px;
     }
 }
+
 @media (min-width: 140em) {
     .section-addProducts__container {
         max-width: 1800px;
     }
 }
+
 .section-addProducts__block {
     background-color: #f0efef;
     height: 100%;
@@ -593,6 +561,7 @@ body {
     box-shadow: 9px 9px 17px -7px rgba(0, 0, 0, 0.67);
     border-radius: 5px;
 }
+
 .section-addProducts__header {
     height: 10%;
     border-bottom: 1px solid darkgray;
@@ -602,9 +571,12 @@ body {
     padding: 20px;
     background-color: #f0efef;
 }
+
 .section-addProducts__begin {
     height: 100%;
+    overflow: hidden;
 }
+
 .section-addProducts__content {
     height: 100%;
     display: flex;
@@ -615,6 +587,7 @@ body {
     position: relative;
     overflow: hidden;
 }
+
 .section-addProducts__btn {
     border: 2px solid lightgrey;
     background-color: #fff;
@@ -625,10 +598,12 @@ body {
     position: relative;
     cursor: pointer;
 }
+
 .section-addProducts__btn:hover {
     border: 2px solid black;
     transition: all 0.3s ease 0s;
 }
+
 .section-addProducts__btn:after, .section-addProducts__btn:before {
     content: "";
     display: block;
@@ -638,14 +613,17 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .section-addProducts__btn:before {
     height: 1em;
     width: 0.2em;
 }
+
 .section-addProducts__btn:after {
     height: 0.2em;
     width: 1em;
 }
+
 .section-addProducts__btn:hover:before, .section-addProducts__btn:hover:after {
     background-color: black;
     transition: all 0.3s ease 0s;
@@ -662,9 +640,11 @@ body {
     box-shadow: -5px 0px 5px -4px rgba(0, 0, 0, 0.24);
     overflow: auto;
 }
+
 .slide-menu_active {
     right: 0;
 }
+
 .slide-menu__wrapper {
     display: flex;
     height: 10%;
@@ -672,13 +652,16 @@ body {
     justify-content: space-between;
     padding: 0 20px;
 }
+
 .slide-menu__title {
     font-weight: 700;
 }
+
 .slide-menu__form {
     margin: 5px 0px 10px 20px;
     height: 10%;
 }
+
 .slide-menu__form input {
     border: 1px solid #000;
     padding: 10px 0px 10px 35px;
@@ -688,10 +671,12 @@ body {
     font-size: 18px;
     background: url("../img/search-interface-symbol.png") 2% 50%/18px no-repeat;
 }
+
 .slide-menu__subtitle {
     padding: 10px 20px;
     background-color: #dbd9d9;
 }
+
 .slide-menu__closeModal {
     position: absolute;
     z-index: 2;
@@ -703,6 +688,7 @@ body {
     cursor: pointer;
     transition: opacity ease 0.5s;
 }
+
 .slide-menu__closeModal::before, .slide-menu__closeModal::after {
     content: "";
     position: absolute;
@@ -712,15 +698,19 @@ body {
     height: 3px;
     background: #000;
 }
+
 .slide-menu__closeModal::before {
     transform: rotate(45deg);
 }
+
 .slide-menu__closeModal::after {
     transform: rotate(-45deg);
 }
+
 .slide-menu__list {
     margin: 10px 0px 10px 0px;
 }
+
 .product-card__body {
     height: 20px;
     width: 100%;
@@ -732,12 +722,15 @@ body {
     padding: 25px;
     cursor: pointer;
 }
+
 .product-card__body:hover {
     background-color: #f0efef;
 }
+
 .product-card__img {
     pointer-events: none;
 }
+
 .product-card__title {
     pointer-events: none;
 }
@@ -753,9 +746,11 @@ body {
     box-shadow: -5px 0px 5px -4px rgba(0, 0, 0, 0.24);
     overflow: auto;
 }
+
 .product-counter_active {
     right: 0;
 }
+
 .product-counter__body {
     width: 100%;
     height: 100%;
@@ -763,6 +758,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .product-counter__arrow-back {
     position: absolute;
     left: 10px;
@@ -771,21 +767,25 @@ body {
     height: 24px;
     cursor: pointer;
 }
+
 .product-counter__arrow-back img {
     width: 100%;
 }
+
 .product-counter__out {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: space-between;
 }
+
 .product-counter__card {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: space-around;
 }
+
 .product-counter__wrapper1 {
     flex: 0 1 30%;
     height: 100%;
@@ -794,6 +794,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .product-counter__wrapper2 {
     height: 100%;
     flex: 1 0 auto;
@@ -802,26 +803,32 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .product-counter__info-card {
     border: 1px solid #dbd9d9;
     width: 70%;
     border-radius: 5px;
 }
+
 .product-counter__img {
     padding: 10px;
 }
+
 .product-counter__title {
     padding: 10px;
 }
+
 .product-counter__title span {
     font-weight: 700;
 }
+
 .product-counter__portion {
     padding: 10px;
     background-color: #f0efef;
     width: 100%;
     text-align: center;
 }
+
 .product-counter__range {
     display: flex;
     flex-direction: row;
@@ -830,10 +837,12 @@ body {
     width: 100%;
     padding: 20px;
 }
+
 .product-counter__portions {
     width: 100%;
     font-size: 16px;
 }
+
 .product-counter__one-portion {
     display: flex;
     justify-content: space-between;
@@ -843,6 +852,7 @@ body {
     position: relative;
     padding: 20px;
 }
+
 .product-counter__btn {
     margin-top: 15px;
     width: 100%;
@@ -852,9 +862,11 @@ body {
     background-color: rgba(110, 196, 223, 0.8);
     color: white;
 }
+
 .product-counter__btn:hover {
     background-color: #6ec4df;
 }
+
 .product-counter__close {
     width: 20px;
     height: 20px;
@@ -863,6 +875,7 @@ body {
     transition: opacity ease 0.5s;
     position: relative;
 }
+
 .product-counter__close::before, .product-counter__close::after {
     content: "";
     position: absolute;
@@ -872,9 +885,11 @@ body {
     height: 2px;
     background: #000;
 }
+
 .product-counter__close::before {
     transform: rotate(45deg);
 }
+
 .product-counter__close::after {
     transform: rotate(-45deg);
 }
@@ -884,10 +899,12 @@ body {
     overflow: auto;
     height: 70%;
 }
+
 .added-product__list {
     width: 100%;
     overflow: auto;
 }
+
 .added-product__item {
     height: 50px;
     width: 100%;
@@ -895,6 +912,7 @@ body {
     border-bottom: 1px solid #dbd9d9;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 0px 20px;
     cursor: pointer;
 }
@@ -902,31 +920,117 @@ body {
 .added-product__item:hover {
     background-color: #f0efef;
 }
+
+.added-product__content {
+    flex: 0 0 90%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .added-product__left {
     display: flex;
     align-items: center;
     gap: 10px;
+    pointer-events: none;
 }
+
 .added-product__right {
     display: flex;
     align-items: center;
     gap: 20px;
-}
-.alert-block__success {
-    background-color: #09e56e;
-
+    pointer-events: none;
 }
 
-.alert-block__close-btn {
-    background-color: #ffffff;
-    color: #000000;
-    border: none;
-    padding: 5px;
-    font-size: 20px;
+.added-product__close {
+    width: 20px;
+    height: 20px;
+    opacity: 0.9;
+    transition: opacity ease 0.5s;
+    transition: transform 0.3s ease 0s;
+    position: relative;
+}
+
+.added-product__close:hover {
+    transform: scale(1.3);
+}
+
+.added-product__close::before, .added-product__close::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    display: block;
+    width: 18px;
+    height: 2px;
+    background: #000;
+}
+
+.added-product__close::before {
+    transform: rotate(45deg);
+}
+
+.added-product__close::after {
+    transform: rotate(-45deg);
+}
+
+.edit-product {
+    position: absolute;
+    top: 0;
+    right: -100%;
+    width: 90%;
+    height: 100%;
+    background-color: white;
+    transition: right 0.4s ease-out 0s;
+    box-shadow: -5px 0px 5px -4px rgba(0, 0, 0, 0.24);
+    overflow: auto;
+}
+
+.edit-product_active {
+    right: 0;
+}
+
+.edit-product__body {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 10px 10px 30px;
+}
+
+.edit-product__arrow-back {
+    width: 20px;
+    height: 20px;
     cursor: pointer;
-    outline: none;
 }
 
-.alert-block--hidden {
-    display: none;
+.edit-product__arrow-back img {
+    width: 100%;
+}
+
+.edit-product__content {
+    flex: 0 0 90%;
+}
+
+.edit-product__close {
+    width: 24px;
+    height: 24px;
+    opacity: 0.9;
+    cursor: pointer;
+    transition: opacity ease 0.5s;
+    position: relative;
+}
+
+.edit-product__close::before, .edit-product__close::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    display: block;
+    width: 24px;
+    height: 2px;
+    background: #000;
+}
+
+.edit-product__close::before {
+    transform: rotate(45deg);
+}
+
+.edit-product__close::after {
+    transform: rotate(-45deg);
 }
