--- a/public/assets/css/appmain.css
+++ b/public/assets/css/appmain.css
@@ -1034,3 +1034,52 @@ body {
 .edit-product__close::after {
     transform: rotate(-45deg);
 }
+
+.obertka {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.obertka__item {
+    cursor: pointer;
+    width: 100px;
+    height: 50px;
+    border: 1px solid black;
+    text-align: center;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.obertka__item:hover {
+    background-color: #f0efef;
+}
+
+.active {
+    background-color: #f0efef;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.arrows {
+    cursor: pointer;
+}
+
+.arrow-right {
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid black;
+}
+
+.arrow-left {
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-right: 10px solid black;
+}
